--- a/index.html
+++ b/index.html
@@ -358,33 +358,33 @@
       },
       {
         _id: "6",
-        name: "Epsilon Parts",
+        name: "parts and more",
         supplierId: "SUP005E5",
         contactNumber: "+971505678901",
         addressLine1: "Sharjah Industrial Area",
         addressLine2: "Block B",
         active: false,
-        userId: "user123"
+        userId: "user128"
       },
       {
         _id: "7",
-        name: "Epsilon Parts",
+        name: "sunil kumar",
         supplierId: "SUP005E5",
         contactNumber: "+971505678901",
         addressLine1: "Sharjah Industrial Area",
         addressLine2: "Block B",
         active: false,
-        userId: "user123"
+        userId: "user193"
       },
       {
         _id: "8",
-        name: "Epsilon Parts",
-        supplierId: "SUP005E5",
+        name: "hi world",
+        supplierId: "sup12356",
         contactNumber: "+971505678901",
         addressLine1: "Sharjah Industrial Area",
         addressLine2: "Block B",
-        active: false,
-        userId: "user123"
+        active: true,
+        userId: "user173"
       }
     ];
 
